Finished decisions#new, added pros/cons, gut feelings to decisions#show

--- a/app/views/decisions/new.html.erb
+++ b/app/views/decisions/new.html.erb
@@ -1,45 +1,2 @@
 <h1>Make a Decision!</h1>
-
- <%= form_for @decision do |f| %>
-   <%= f.label :dilemma %>
-   <%= f.text_field :dilemma %>
-
-   <%= f.label :needed_by %>
-   <%= f.date_field :needed_by %>
-
-   <%= f.label :decision_importance %>
-   <%= f.text_field :decision_importance %>
-
-   <%= f.label :indecisiveness_level %>
-   <%= f.text_field :indecisiveness_level %>
-
-   <%= f.label :best_case %>
-   <%= f.text_area :best_case %>
-
-   <%= f.label :worst_case %>
-   <%= f.text_area :worst_case %>
-
-   <%= f.label :gut_feeling %>
-   <%= f.text_area :gut_feeling %>
-
-   <%= f.label :pluses %>
-   <%= f.text_area :pluses %>
-
-   <%= f.label :minuses %>
-   <%= f.text_area :minuses %>
-
-   <%= f.label :intuitive_conclusion %>
-   <%= f.text_field :intuitive_conclusion %>
-
-   <%= f.label :rational_conclusion %>
-   <%= f.text_field :rational_conclusion %>
-
-   <%= f.label :decision %> 
-   <%= f.text_field :decision %>
-
-   <%= f.label :next_steps %>
-   <%= f.text_field :next_steps %>
-
-   <%= f.submit %>
-
- <% end %>
+<%= render 'decisions/form' %>
