--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class = "container">
-    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-    <%= yield %>
+    <div class="col-md-8 col-md-offset-2">
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <%= yield %>
+    </div>
   </div>
-
-
 </body>
 </html>
