--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,20 @@
 </head>
 <body>
   <div class = "container">
-    <div class="col-md-8 col-md-offset-2">
-      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+    <div class="col-md-6 col-md-offset-3">
+      <nav class="navbar">
+        <div class="container-fluid">
+          <div class="navbar-text pull-right">
+            <% if current_user %>
+              You're signed in as: <%= current_user.email %> |
+              <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+            <% else %>
+              <%= link_to "Sign In", new_user_session_path %> / <%= link_to "Sign Up", new_user_registration_path %>
+            <% end %>
+          </div>
+        </div>
+      </nav>
+      <h1 class="text-center">Make A Decision</h1><hr>
       <%= yield %>
     </div>
   </div>
