Created seeds.db, added validation and updated decisions/show.html.erb

--- a/app/views/decisions/show.html.erb
+++ b/app/views/decisions/show.html.erb
@@ -95,4 +95,8 @@
       </tbody>
     </table>
   </div>
-</div>
+
+  <div class="col-md-12">
+    <p><strong>Decision:</strong> <%= @decision.final_decision %></p>
+    <p><strong>Next Steps:</strong> <%= @decision.next_steps %></p>
+  </div>
