--- a/app/views/decisions/_form.html.erb
+++ b/app/views/decisions/_form.html.erb
@@ -83,8 +83,8 @@
        </div>
 
        <div class="form-group">
-       <%= f.label :decision %>
-       <%= f.text_field :decision, class: "form-control" %>
+       <%= f.label :final_decision %>
+       <%= f.text_field :final_decision, class: "form-control" %>
        </div>
 
        <div class="form-group">
