--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,11 @@
           </div>
         </div>
       </nav>
+            <% if notice %>
+      <div class="alert alert-warning" role="alert">
+        <%= flash[:notice] %>
+      </div>
+      <% end %>
       <h1 class="text-center">Make A Decision</h1><hr>
       <%= yield %>
     </div>
