--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ptRxrH1rVK8"></iframe>
+</div>
+
+</br>
+
+<div class="row">
+  <div class="col-md-12 text-center">
+    <%= link_to('Get started', new_decision_path, class: 'btn btn-default btn-lg')  %>
+  </div>
+</div>
+
+
