--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 </head>
 
   <body>
-    <div class="container">
+   <div class = "container">
+    
       <nav class="navbar-default">
         <div class="container-fluid">
           <div class="navbar-text pull-right">
@@ -21,16 +22,16 @@
           </div>
         </div>
       </nav>
-
-      <% if notice %>
-        <div class="alert alert-warning" role="alert">
-          <%= flash[:notice] %>
-        </div>
+            <% if notice %>
+      <div class="alert alert-warning" role="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:notice] %>
+      </div>
       <% end %>
-
       <h1 class="text-center">Make A Decision</h1><hr>
       <%= yield %>
     </div>
+
   </body>
 
 </html>
