--- a/app/views/decisions/_form.html.erb
+++ b/app/views/decisions/_form.html.erb
@@ -1,6 +1,15 @@
-
- <%= form_for @decision do |f| %>
-
+<% if @decision.errors.any? %>
+ <div class="row">
+   <div class="alert alert-warning col-md-8 col-md-offset-2 text-center">
+     <h3><%= pluralize(@decision.errors.count, 'error') %> prohibited this decision from being saved:</h3>
+     <% @decision.errors.full_messages.each do |error| %>
+      <%= error %><br>
+     <% end %>
+    </div>
+ </div>
+<% end %>
+<div class="row">
+<%= form_for @decision do |f| %>
    <div class="panel panel-default">
      <div class="panel-heading">
        <h4 id="getting-started-btn" class="pointer">Getting Started</h4>
@@ -103,7 +112,7 @@
    <%= f.submit class: "btn btn-default" %>
 
  <% end %>
-
+ </div>
  <script>
    $('.form-group select').addClass('form-control');
 
