--- a/app/views/decisions/_form.html.erb
+++ b/app/views/decisions/_form.html.erb
@@ -1,3 +1,4 @@
+
 <% if @decision.errors.any? %>
  <div class="row">
    <div class="alert alert-warning col-md-8 col-md-offset-2 text-center">
@@ -8,8 +9,9 @@
     </div>
  </div>
 <% end %>
+
 <div class="row">
-<%= form_for @decision do |f| %>
+<%= form_for [current_user, @decision] do |f| %>
    <div class="panel panel-default">
      <div class="panel-heading">
        <h4 id="getting-started-btn" class="pointer">Getting Started</h4>
@@ -113,6 +115,7 @@
 
  <% end %>
  </div>
+
  <script>
    $('.form-group select').addClass('form-control');
 
