--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
+<div class="page-header">
+  <h1>Make a Decision!</h1>
+</div>
+
 <div class="embed-responsive embed-responsive-16by9">
   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ptRxrH1rVK8"></iframe>
 </div>
