Added like button to show page.

--- a/app/views/decisions/show.html.erb
+++ b/app/views/decisions/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container-fluid">
     <div class="row">
+      <button class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Like</button><hr>
       <div class="col-md-12">
         <p><strong>Dilemma:</strong> <%= @decision.dilemma %></p><hr>
       </div>
